--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1814,8 +1814,5 @@ footer .escrow dd:last-child {
   position: fixed;
   right: 10px;
   bottom: 35px;
-}
-
-.btn-top.hidden {
-  right: -100px;
+  cursor: pointer;
 }
