--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,7 +1,7 @@
 @charset "utf-8";
 
 body {
-  font-family: 'notokr-regular', 'Noto Sans CJK kR', 'Noto Sans KR', 'Arita-buri-SemiBold', '맑은 고딕';
+  font-family:'Noto Sans KR', '맑은 고딕';
 }
 
 .a11y-hidden {
@@ -144,7 +144,7 @@ header .logo-area .tnb .util .language select {
   font-size: 13px;
   appearance: none;
   margin-right: 10px;
-  color: #636363;
+  cursor: pointer;
 }
 
 header .logo-area .tnb .util .language select:focus {
@@ -424,7 +424,7 @@ header .gnb-area .addmenu-list li .add-menu li+li {
 .visual-wrap .img-slide a .title {
   margin-top: 180px;
   font-size: 52px;
-  font-family: 'aritasm', 'Arita-buri-SemiBold', sans-serif;
+  font-family: 'Arita-buri-SemiBold', sans-serif;
 }
 
 .visual-wrap .img-slide a .sub-title {
@@ -598,6 +598,7 @@ header .gnb-area .addmenu-list li .add-menu li+li {
 }
 
 .weekly-best .rank-container li .image-wrap {
+  display: inline-block;
   width: 100%;
   height: 270px;
   background: #f7f7f7;
@@ -639,6 +640,7 @@ header .gnb-area .addmenu-list li .add-menu li+li {
 }
 
 .weekly-best .wrap h3 {
+  display: inline-block;
   font-size: 22px;
   margin-bottom: 30px;
   letter-spacing: -0.3px;
@@ -696,7 +698,7 @@ header .gnb-area .addmenu-list li .add-menu li+li {
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
   line-height: 1.2em;
-  height: 38px;
+  height: 35px;
   text-align: left;
 }
 
@@ -1103,6 +1105,7 @@ header .gnb-area .addmenu-list li .add-menu li+li {
 }
 
 .saleUp .image-area>.left {
+  display: block;
   float: left;
   width: 875px;
   height: 465px;
@@ -1540,7 +1543,7 @@ header .gnb-area .addmenu-list li .add-menu li+li {
 
 .sns h3 span {
   position: absolute;
-  font-family: 'aritasm', 'Arita-buri-SemiBold', sans-serif;
+  font-family: 'Arita-buri-SemiBold', sans-serif;
   left: 100px;
   top: -5px;
   color: #505051;
@@ -1812,7 +1815,7 @@ footer .escrow dd:last-child {
 /* top button */
 .btn-top {
   position: fixed;
-  right: 10px;
+  right: -100px;
   bottom: 35px;
   cursor: pointer;
 }
