--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1341,17 +1341,17 @@ header .gnb-area .addmenu-list li .add-menu li+li {
   height: 525px;
   background: #000;
   overflow: hidden;
+  position: relative;
 }
 
 .shop .slide-area .top ul {
   width: 4000px;
   height: 522px;
   font-size: 0;
-  position: relative;
 }
 
-.shop .slide-area .top ul::before,
-.shop .slide-area .top ul::after {
+.shop .slide-area .top::before,
+.shop .slide-area .top::after {
   content: '';
   position: absolute;
   width: 237px;
@@ -1359,7 +1359,7 @@ header .gnb-area .addmenu-list li .add-menu li+li {
   background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5));
 }
 
-.shop .slide-area .top ul::after {
+.shop .slide-area .top::after {
   top: 0;
   left: 1163px;
 }
@@ -1389,8 +1389,10 @@ header .gnb-area .addmenu-list li .add-menu li+li {
 }
 
 .shop .bottom .shop-list {
+  position: relative;
   height: inherit;
   overflow: hidden;
+  z-index: 5;
 }
 
 .shop .bottom .shop-list li {
@@ -1402,6 +1404,7 @@ header .gnb-area .addmenu-list li .add-menu li+li {
   line-height: 95px;
   text-align: center;
   font-size: 20px;
+  cursor: pointer;
 }
 
 .shop .bottom .shop-list li.active {
@@ -1410,29 +1413,28 @@ header .gnb-area .addmenu-list li .add-menu li+li {
 
 .shop .arrow-area {
   position: absolute;
-  width: 1300px;
-  height: 21px;
-  top: 40px;
-  right: 50px;
+  top: 50%;
+  left: 0;
+  transform: translateY(-50%);
+  width: inherit;
+  z-index: 1;
 }
 
 .shop .bottom .prev {
-  left: 100px;
-  top: 0;
-  -webkit-filter: invert(80%);
-  filter: invert(80%);
+  position: absolute;
+  left: 20px;
 }
 
 .shop .bottom .next {
-  right: 0;
-  -webkit-filter: invert(80%);
+  position: absolute;
+  right: 20px;
   filter: invert(80%);
 }
 
 .shop .bottom .prev:hover,
 .shop .bottom .next:hover {
-  right: 0;
-  -webkit-filter: invert(80%);
+  -webkit-filter: invert(100%);
+  -ms-filter: invert(100%);
   filter: invert(100%);
 }
 
